dfir_rs/tests/compile-fail/nightly/surface_negative_loop.stderr
error: Cycle detected in graph, which must be a DAG (directed acyclic graph). Use `defer_tick()` or `defer_tick_lazy()` to break the cycle. Cycle: [GraphNodeId(1v1)]
 --> tests/compile-fail/nightly/surface_negative_loop.rs:5:16
  |
5 |         diff = difference();
  |                ^^^^^^^^^^
